Fix: Display icons in console on small screens

--- a/css/console.less
+++ b/css/console.less
@@ -507,3 +507,9 @@ h1:not(.wp-heading-inline) {
 	}
 
 }
+
+@media only screen and (max-width: 960px) {
+	#adminmenu .fa, #adminmenu .fa5 {
+			margin-left: 999px;
+		}
+}
